# xambot

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECT_PLAN.md  PLAN.md  STATUS.md  TO.md
scripts/: generate_key.py
src/: __init__.py  main.py
src/adapters/: __init__.py  base.py
src/adapters/maxx/: __init__.py  client.py  formatting.py  schemas.py  webhook.py
src/ai/: __init__.py  base.py  schemas.py  yais.py
src/api/: app.py  deps.py
src/api/middleware/: error_handler.py  request_id.py
src/api/routes/: health.py  webhooks.py
src/core/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  router.py  security.py  tenant.py
src/core/models/: __init__.py  base.py  company.py  conversation.py  integration.py  message.py  user.py
src/core/services/: __init__.py  company_service.py  conversation_service.py  integration_service.py  message_service.py  user_service.py
src/plugins/: __init__.py  base.py  registry.py
