[project]
name = "multibot"
version = "0.1.0"
description = "MultiBot — мультимессенджерная AI-платформа для бизнеса"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "pydantic-settings>=2.7,<2.8",
    "httpx>=0.28,<0.29",
    "pyyaml>=6.0,<7.0",
    "cryptography>=44.0,<45.0",
    "structlog>=24.0,<25.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.25,<0.26",
    "pytest-cov>=6.0,<7.0",
    "pytest-httpx>=0.30,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.14,<1.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
